// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e2e diffing different images 1`] = `
Object {
  "value": 47,
}
`;

exports[`e2e diffing different images without an output image 1`] = `
Object {
  "value": 47,
}
`;

exports[`e2e diffing different sizes images 1`] = `
Object {
  "value": 125,
}
`;

exports[`e2e diffing images which cannot scale into each other 1`] = `
Object {
  "value": 28,
}
`;

exports[`e2e diffing the same image where 1 has a transparent background 1`] = `
Object {
  "value": 100,
}
`;
